Update to qwen3:8b

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 API_KEY=""
-MODEL="ollama_chat/llama3.2:3b"
+MODEL="ollama_chat/qwen3:8b"
 
-# MODEL="ollama_chat/qwen3:8b"
+
 # MODEL_GEMINI_PRO="gemini-1.5-pro"
 # MODEL_GPT_4O="openai/gpt-4o"
