--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 API_KEY=""
-MODEL="ollama_chat/qwen3:8b-q8_0"
+MODEL="ollama_chat/qwen3:8b"
 
 # MODEL="ollama_chat/qwen3:14b"
 # MODEL="ollama_chat/qwen3:8b-q8_0"
