Add OLLAMA_API_BASE env variable

--- a/.env
+++ b/.env
@@ -1,14 +1,9 @@
 API_KEY=""
 MODEL="ollama_chat/qwen3:8b"
-
-# MODEL="ollama_chat/qwen3:14b"
-# MODEL="ollama_chat/qwen3:8b-q8_0"
-# MODEL="ollama_chat/qwen3:4b-q8_0"
-# MODEL="ollama_chat/qwen3:14b-q8_0"
+OLLAMA_API_BASE="http://localhost:11434"
 
 # MODEL="ollama_chat/mistral-small3.1:latest"
-# MODEL="ollama_chat/deepseek-r1:8b"
 # MODEL="ollama_chat/gpt-oss:20b"
-# MODEL="ollama_chat/qwen3:8b"
 # MODEL_GEMINI_PRO="gemini-1.5-pro"
 # MODEL_GPT_4O="openai/gpt-4o"
+
